# z-wave-nvm-migration-tool

./: CMakeLists.txt  Dockerfile  README.md  helper.mk  main.c  passwd  sonar-project.properties
.github/workflows/: analyze.yml  build.yml  cla.yml  test.yml
cmake/modules/: FindJsonC.cmake
tests/: nvm3_stubs.h  test.sh
tests/controllerlib/: CMakeLists.txt  test_controller_nvm.c
tests/libs/: CMakeLists.txt
tests/mock/: nvm3_stubs.h
zw_nvm_converter/: CMakeLists.txt  nvmconv_main.c
zw_nvm_converter/controllerlib_7.xx/: CMakeLists.txt  api_wrappers.c  controller_nvm.c  controller_nvm.h  nvm3_helpers.c
zw_nvm_converter/libs/json_helpers/: CMakeLists.txt
zw_nvm_converter/libs/json_upgrade/: CMakeLists.txt  json_upgrade.c
